--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ a span{
   padding: 5px 0;
   position: absolute;
   z-index: 1;
-  border:3px dotted black;
+  border:3px dotted blue;
   bottom: 100%;
   left: 50%;
   margin-left: -60px;
